TM15346 fix for misaligned button

--- a/src/main/webapp/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-show.component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-show.component.sass
@@ -1,3 +1,5 @@
 .asset-explorer-view-show-component
   padding-top: 8px
 
+  .asset-view-show-caret
+    margin-left: -2px
